--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "supervisor": "0.4.x"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-jshint": "~0.7.1",
-    "grunt-bump-build-git": "~1.0.0",
-    "grunt-browserify": "~1.3.1",
-    "grunt-jsdoc": "~0.5.1",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jasmine": "~0.6.3"
+    "gulp": "~3.6.2",
+    "gulp-concat": "~2.2.0",
+    "gulp-rename": "~1.2.0",
+    "gulp-uglify": "~0.3.0",
+    "gulp-jshint": "~1.6.1",
+    "gulp-jasmine": "~0.2.0",
+    "gulp-browserify": "~0.5.0",
+    "gulp-jsdoc": "~0.1.4",
+    "gulp-watch": "~0.6.5"
   },
   "scripts": {
     "start": "node_modules/.bin/supervisor server"
