User Browserify instead of AMD.
And some accompanying reorganization.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "dependencies": {
     "connect": "*",
     "express": "*",
+    "knockout": "^3.1.0",
+    "knockout.mapping": "^2.4.2",
     "request": "*",
-    "supervisor": "0.4.x"
+    "supervisor": "0.4.x",
+    "weakmap": "0.0.6"
   },
   "devDependencies": {
     "gulp": "~3.6.2",
