--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "connect": "^3.0.0",
     "express": "^4.4.3",
+    "cors": "~2.3.1",
     "knockout": "^3.1.0",
     "knockout.mapping": "^2.4.2",
     "request": "*",
