--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ausglobe",
   "version": "0.0.1",
   "dependencies": {
+    "compression": "1.0.8",
     "connect": "^3.0.0",
     "express": "^4.4.3",
     "cors": "~2.3.1",
@@ -9,7 +10,8 @@
     "knockout.mapping": "^2.4.2",
     "request": "*",
     "supervisor": "^0.4.1",
-    "weakmap": "0.0.6"
+    "weakmap": "0.0.6",
+    "yargs": "1.2.6"
   },
   "devDependencies": {
     "gulp": "^3.8.0",
