--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "yargs": "1.2.6"
   },
   "devDependencies": {
+    "browserify": "^4.2.3",
     "exorcist": "^0.1.6",
     "gulp": "^3.8.0",
-    "gulp-browserify": "~0.5.0",
     "gulp-concat": "~2.2.0",
     "gulp-jasmine": "~0.2.0",
     "gulp-jsdoc": "^0.1.4",
@@ -24,6 +24,9 @@
     "gulp-sourcemaps": "^1.1.0",
     "gulp-uglify": "~0.3.0",
     "gulp-watch": "~0.6.5",
+    "intern": "^2.0.1",
+    "vinyl-buffer": "0.0.0",
+    "vinyl-source-stream": "^0.1.1",
     "vinyl-transform": "0.0.1"
   },
   "scripts": {
