--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "browserify": "^4.2.3",
     "exorcist": "^0.1.6",
+    "glob": "^4.0.4",
     "gulp": "^3.8.0",
     "gulp-concat": "~2.2.0",
     "gulp-jasmine": "~0.2.0",
@@ -22,7 +23,6 @@
     "gulp-uglify": "~0.3.0",
     "gulp-util": "^3.0.0",
     "gulp-watch": "~0.6.5",
-    "intern": "^2.0.1",
     "vinyl-buffer": "0.0.0",
     "vinyl-source-stream": "^0.1.1",
     "vinyl-transform": "0.0.1",
