--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browserify": "^4.2.3",
     "exorcist": "^0.1.6",
     "glob": "^4.0.4",
+    "glob-all": "^2.4.1",
     "gulp": "^3.8.0",
     "gulp-concat": "~2.2.0",
     "gulp-jasmine": "~0.2.0",
