--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "browserify": "^4.2.3",
+    "deamdify": "^0.1.1",
     "exorcist": "^0.1.6",
     "glob": "^4.0.4",
     "glob-all": "^2.4.1",
