Use CORS for requests to ga.gov.au.

--- a/public/config.json
+++ b/public/config.json
@@ -4,6 +4,7 @@
  "corsDomains" : [
         "research.nicta.com.au",
         "data.gov.au",
+        "ga.gov.au",
         "corsproxy.com"
     ]
 }
