Show only groups containing WMS data sources.
Also use CORS for access data.vic.gov.au.

--- a/public/config.json
+++ b/public/config.json
@@ -5,7 +5,8 @@
         "research.nicta.com.au",
         "data.gov.au",
         "ga.gov.au",
-        "corsproxy.com"
+        "corsproxy.com",
+        "data.vic.gov.au"
     ]
 }
 
