added arcgis.com to proxy

--- a/public/config.json
+++ b/public/config.json
@@ -1,5 +1,6 @@
 { "proxyDomains" : [
-        "gov.au"
+        "gov.au",
+        "arcgis.com"
     ],
  "corsDomains" : [
         "research.nicta.com.au",
