Fix Victorian Government dataset.
It apparently doesn't support CORS anymore.

--- a/public/config.json
+++ b/public/config.json
@@ -5,8 +5,7 @@
         "research.nicta.com.au",
         "data.gov.au",
         "ga.gov.au",
-        "corsproxy.com",
-        "data.vic.gov.au"
+        "corsproxy.com"
     ],
   "initialDataMenu" : "init_nm.json",
   "initialCamera" : { "west": 140, "south": -39, "east": 150, "north": -34}
