--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "gulp-jasmine": "~0.2.0",
     "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "~1.6.1",
-    "gulp-sourcemaps": "^1.1.0",
-    "gulp-uglify": "~0.3.0",
+    "gulp-sourcemaps": "1.1.0",
+    "gulp-uglify": "0.3.1",
     "gulp-util": "^3.0.0",
     "gulp-watch": "~0.6.5",
     "vinyl-buffer": "0.0.0",
