moved jshint preset

--- a/src/.jshintrc
+++ b/src/.jshintrc
@@ -30,7 +30,7 @@
   "globalstrict": true,
   "iterator": false,
   "lastsemic": false,
-  "laxbreak": false,
+  "laxbreak": true,
   "laxcomma": false,
   "loopfunc": false,
   "moz": false,
