--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "compression": "1.0.8",
     "connect": "^3.0.0",
     "express": "^4.4.3",
-    "cors": "~2.3.1",
+    "cors": "~2.5.0",
     "request": "*",
     "supervisor": "^0.4.1",
-    "yargs": "1.2.6"
+    "yargs": "1.2.6",
+    "proj4js-defs": "0.0.1",
+    "proj4": "~2.2.1"
   },
   "devDependencies": {
     "browserify": "^4.2.3",
