--- a/public/config.json
+++ b/public/config.json
@@ -1,14 +1,7 @@
-{ "proxyDomains" : [
+{
+    "proxyDomains" : [
         "gov.au",
         "arcgis.com"
-    ],
- "corsDomains" : [
-        "research.nicta.com.au",
-        "data.gov.au",
-        "ga.gov.au",
-        "corsproxy.com"
-    ],
-  "initialDataMenu" : "init_nm.json",
-  "initialCamera" : { "west": 105, "south": -45, "east": 155, "north": -5}
+    ]
 }
 
