--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "dependencies": {
     "compression": "1.0.8",
     "connect": "^3.0.0",
-    "express": "^4.4.3",
     "cors": "~2.5.0",
+    "express": "^4.4.3",
+    "formidable": "~1.0.15",
+    "mongoose": "^3.8.18",
+    "ogr2ogr": "~0.4.1",
+    "proj4": "~2.2.1",
+    "proj4js-defs": "0.0.1",
     "request": "*",
     "supervisor": "^0.4.1",
-    "yargs": "1.2.6",
-    "ogr2ogr": "~0.4.1",
-    "proj4js-defs": "0.0.1",
-    "proj4": "~2.2.1",
-    "formidable": "~1.0.15"
+    "yargs": "1.2.6"
   },
   "devDependencies": {
     "browserify": "^4.2.3",
