--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ node_js:
 - '0.10'
 script:
 - gulp lint docs release
-addons:
-  artifacts:
-    key:
-      secure: c05KlnnQ8r4ciWRcj2BLWsazDyTFYyD/+933n8pI989H1y8TZkcdaLx/czRLqttYX2farZ2NRQ7jEx0ZBCSmgn7MEIBnIsr+kVt/iv3C2zgeyQZ6B/sCCofHSaPRLI6zrSErtZSlLNnFKCcWc3q7LJ7RZfh04N9ZP8Si4xtcgeg=
-    secret:
-      secure: bZaE6jTmJ535UpEtNISbIpGcmifIeo8R5MktTJQ0Rnw3OwJjPEWl5r44r5Vf5sKjg846nYqI+HVRAw9876nAaGvytjfkhUJJJ7cIGtFN7fmEXemsJcRbg8bA6aOXQVpNo7+x8GidcD/GSNlUFpUZkanJySKP1qnE78luqr8PkCo=
-    bucket: nationalmap-build-artifacts
-    paths:
-    - public/
+deploy:
+  provider: s3
+  access_key_id: AKIAJI2CLEK7CFXORVWA
+  secret_access_key:
+    secure: Q3E6wps0GOEAtHXiylkVIbZTjZCWMwYA4LG0ofaFdKTSa9Qzfu75rubuiDRInmK+Fhj+mXL1HbMKhSWfrmE49RIcuS8ntcYT+dop3JnOnH+ikaMDYN6NwhsnXsgF0sChV5hW+9M0K/0Ev0L/5DBF6366v1IivHJtTf16gsB6Akk=
+  bucket: nationalmap-build-artifacts
+  local-dir: public
+  acl: public_read
+  region: ap-southeast-2
