initUrl moved to config.json

--- a/public/config.json
+++ b/public/config.json
@@ -4,6 +4,9 @@
         "gov.au",
         "arcgis.com",
         "unep.ch:8080"
+    ],
+    "initializationUrls" : [
+    	"init_un.json"
     ]
 }
 
