--- a/public/config.json
+++ b/public/config.json
@@ -6,7 +6,8 @@
         "arcgis.com"
     ],
     "initializationUrls" : [
-    	"init_nm.json"
+    	"init_nm.json",
+    	"init_tas.json"
     ]
 }
 
