--- a/public/config.json
+++ b/public/config.json
@@ -6,8 +6,7 @@
         "arcgis.com"
     ],
     "initializationUrls" : [
-    	"init_nm.json",
-    	"init_tas.json"
+        "init_nm.json"
     ]
 }
 
