Add submodules script.

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   },
   "scripts": {
     "start": "node_modules/.bin/supervisor server",
-    "postinstall": "git submodule init && ln -s -n -f ../third_party/TerriaJS/src/ ./node_modules/TerriaJS && cd third_party/TerriaJS && git submodule init && cd ../.. && ln -s -n -f ../third_party/TerriaJS/third_party/cesium/Source/ ./node_modules/Cesium"
+    "submodules": "git submodule init && git submodule update --recursive && cd third_party/TerriaJS && git submodule init && cd ../.. && git submodule update --recursive",
+    "postinstall": "ln -s -n -f ../third_party/TerriaJS/src/ ./node_modules/TerriaJS && ln -s -n -f ../third_party/TerriaJS/third_party/cesium/Source/ ./node_modules/Cesium"
   },
   "browser": {
     "knockout": "./third_party/cesium/Source/ThirdParty/knockout.js"
