--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "scripts": {
     "start": "node_modules/.bin/supervisor server",
-    "submodules": "git submodule init && git submodule update && git submodule foreach 'git submodule init && git submodule update'",
+    "submodules": "git submodule init && git submodule update && cd third_party/TerriaJS && git submodule init && git submodule update && cd ../..",
     "postinstall": "ln -s -n -f ../third_party/TerriaJS/src/ ./node_modules/TerriaJS && ln -s -n -f ../third_party/TerriaJS/third_party/cesium/Source/ ./node_modules/Cesium"
   },
   "browser": {
