Cleaner travis script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: node_js
 node_js:
 - '0.10'
 script:
-- npm run submodules && gulp lint docs release
+- npm run submodules
+- gulp lint docs release
 #deploy:
 #  provider: s3
 #  access_key_id: AKIAJI2CLEK7CFXORVWA
