--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "proj4js-defs": "0.0.1",
     "request": "*",
     "supervisor": "^0.4.1",
+    "terriajs": "0.0.12",
     "yargs": "1.2.6"
   },
   "devDependencies": {
@@ -32,21 +33,20 @@
     "gulp-jasmine": "~0.2.0",
     "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "~1.6.1",
-    "gulp-less": "^1.3.6",
+    "gulp-less": "^3.0.2",
     "gulp-sourcemaps": "1.1.0",
     "gulp-uglify": "0.3.1",
     "gulp-util": "^3.0.0",
     "gulp-watch": "~0.6.5",
     "less": "^2.1.1",
+    "less-plugin-npm-import": "^2.0.0",
     "vinyl-buffer": "0.0.0",
     "vinyl-source-stream": "^0.1.1",
     "vinyl-transform": "0.0.1",
     "watchify": "^3.1.0"
   },
   "scripts": {
-    "start": "node_modules/.bin/supervisor server",
-    "submodules": "git submodule init && git submodule update && cd third_party/TerriaJS && git submodule init && git submodule update && cd ../..",
-    "postinstall": "ln -s -n -f ../third_party/TerriaJS/src/ ./node_modules/TerriaJS && ln -s -n -f ../third_party/TerriaJS/third_party/cesium/Source/ ./node_modules/Cesium"
+    "start": "node_modules/.bin/supervisor server"
   },
   "browser": {
     "knockout": "./third_party/cesium/Source/ThirdParty/knockout.js"
