--- a/package.json
+++ b/package.json
@@ -8,48 +8,33 @@
         "url": "http://github.com/NICTA/TerriaJS"
     },
     "dependencies": {
-        "compression": "1.0.8",
-        "connect": "^3.0.0",
-        "cors": "~2.5.0",
-        "express": "^4.4.3",
-        "formidable": "~1.0.15",
-        "javascript-natural-sort": "^0.7.1",
-        "ogr2ogr": "~0.4.1",
-        "proj4": "~2.2.1",
-        "proj4js-defs": "0.0.1",
-        "request": "*",
-        "supervisor": "^0.4.1",
-        "yargs": "1.2.6"
+        "javascript-natural-sort": "^0.7.1"
     },
     "devDependencies": {
-        "brfs": "^1.2.0",
-        "browserify": "^4.2.3",
+        "brfs": "^1.4.0",
+        "browserify": "^9.0.8",
         "deamdify": "^0.1.1",
         "exorcist": "^0.1.6",
-        "glob": "^4.0.4",
-        "glob-all": "^2.4.1",
-        "gulp": "^3.8.0",
-        "gulp-concat": "~2.2.0",
-        "gulp-jasmine": "~0.2.0",
+        "glob": "^5.0.5",
+        "glob-all": "^3.0.1",
+        "gulp": "^3.8.11",
+        "gulp-concat": "^2.5.2",
+        "gulp-jasmine": "^2.0.1",
         "gulp-jsdoc": "^0.1.4",
-        "gulp-jshint": "~1.6.1",
-        "gulp-less": "^1.3.6",
-        "gulp-sourcemaps": "1.1.0",
-        "gulp-uglify": "0.3.1",
-        "gulp-util": "^3.0.0",
-        "gulp-watch": "~0.6.5",
-        "less": "^2.1.1",
-        "vinyl-buffer": "0.0.0",
-        "vinyl-source-stream": "^0.1.1",
-        "vinyl-transform": "0.0.1",
-        "watchify": "git://github.com/cconger/watchify#35407c030db9c6c9099e7fc2a5c21ac5eb7db5f8"
+        "gulp-jshint": "^1.10.0",
+        "gulp-less": "^3.0.2",
+        "gulp-sourcemaps": "^1.5.2",
+        "gulp-uglify": "^1.2.0",
+        "gulp-util": "^3.0.4",
+        "gulp-watch": "^4.2.4",
+        "less": "^2.5.0",
+        "vinyl-buffer": "^1.0.0",
+        "vinyl-source-stream": "^1.1.0",
+        "vinyl-transform": "^1.0.0",
+        "watchify": "^3.1.1"
     },
     "scripts": {
-        "prepublish": "gulp prepare-cesium",
-        "start": "node_modules/.bin/supervisor server"
-    },
-    "browser": {
-        "knockout": "./third_party/cesium/Source/ThirdParty/knockout.js"
+        "prepublish": "gulp prepare-cesium"
     },
     "browserify": {
         "transform": ["brfs", "deamdify"]
