Get the tests working.

--- a/package.json
+++ b/package.json
@@ -1,42 +1,50 @@
 {
-    "name": "terriajs",
-    "version": "0.0.12",
-    "description": "Geospatial data visualization platform.",
-    "license": "Apache-2.0",
-    "repository": {
-        "type": "git",
-        "url": "http://github.com/NICTA/TerriaJS"
-    },
-    "dependencies": {
-        "javascript-natural-sort": "^0.7.1"
-    },
-    "devDependencies": {
-        "brfs": "^1.4.0",
-        "browserify": "^9.0.8",
-        "deamdify": "^0.1.1",
-        "exorcist": "^0.1.6",
-        "glob": "^5.0.5",
-        "glob-all": "^3.0.1",
-        "gulp": "^3.8.11",
-        "gulp-concat": "^2.5.2",
-        "gulp-jasmine": "^2.0.1",
-        "gulp-jsdoc": "^0.1.4",
-        "gulp-jshint": "^1.10.0",
-        "gulp-less": "^3.0.2",
-        "gulp-sourcemaps": "^1.5.2",
-        "gulp-uglify": "^1.2.0",
-        "gulp-util": "^3.0.4",
-        "gulp-watch": "^4.2.4",
-        "less": "^2.5.0",
-        "vinyl-buffer": "^1.0.0",
-        "vinyl-source-stream": "^1.1.0",
-        "vinyl-transform": "^1.0.0",
-        "watchify": "^3.1.1"
-    },
-    "scripts": {
-        "prepublish": "gulp prepare-cesium"
-    },
-    "browserify": {
-        "transform": ["brfs", "deamdify"]
-    }
+  "name": "terriajs",
+  "version": "0.0.12",
+  "description": "Geospatial data visualization platform.",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/NICTA/TerriaJS"
+  },
+  "dependencies": {
+    "javascript-natural-sort": "^0.7.1",
+    "leaflet": "^0.7.3"
+  },
+  "devDependencies": {
+    "brfs": "^1.4.0",
+    "browserify": "^9.0.8",
+    "compression": "^1.4.3",
+    "cors": "^2.5.3",
+    "deamdify": "^0.1.1",
+    "exorcist": "^0.1.6",
+    "express": "^4.12.3",
+    "glob": "^5.0.5",
+    "glob-all": "^3.0.1",
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
+    "gulp-jasmine": "^2.0.1",
+    "gulp-jsdoc": "^0.1.4",
+    "gulp-jshint": "^1.10.0",
+    "gulp-less": "^3.0.2",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.4",
+    "gulp-watch": "^4.2.4",
+    "less": "^2.5.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "vinyl-transform": "^1.0.0",
+    "watchify": "^3.1.1",
+    "yargs": "^3.7.2"
+  },
+  "scripts": {
+    "prepublish": "gulp prepare-cesium"
+  },
+  "browserify": {
+    "transform": [
+      "brfs",
+      "deamdify"
+    ]
+  }
 }
