--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "html2canvas": "^0.5.0-alpha2",
     "javascript-natural-sort": "^0.7.1",
     "leaflet": "^0.7.3",
-    "proj4": "^2.3.6"
+    "proj4": "^2.3.6",
+    "togeojson": "^0.11.1"
   },
   "devDependencies": {
     "brfs": "^1.4.0",
