--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "~1.10.0",
     "gulp-less": "^3.0.2",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "1.5.2",
     "gulp-uglify": "1.2.0",
     "gulp-util": "^3.0.4",
