--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "proj4js-defs": "0.0.1",
     "request": "*",
     "supervisor": "^0.6.0",
-    "terriajs": "0.0.23",
+    "terriajs": "^0.0.24",
     "yargs": "3.7.2"
   },
   "devDependencies": {
