--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "url": "http://github.com/TerriaJS/terriajs"
   },
   "dependencies": {
-    "brfs": "^1.4.0",
     "URIjs": "^1.15.0",
+    "brfs": "^1.4.0",
     "html2canvas": "^0.5.0-alpha2",
     "javascript-natural-sort": "^0.7.1",
     "leaflet": "^0.7.3",
     "less": "^2.5.0",
+    "less-plugin-npm-import": "^2.0.0",
     "proj4": "^2.3.6",
     "terriajs-cesium": "^0.0.5",
     "togeojson": "^0.9.0"
