--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "less": "^2.5.0",
     "less-plugin-npm-import": "^2.0.0",
     "proj4": "^2.3.6",
-    "terriajs-cesium": "git://github.com/terriajs/terriajs-cesium#cesiumUpgrade",
+    "terriajs-cesium": "git://github.com/TerriaJS/cesium.git#cesiumUpgrade",
     "togeojson": "^0.9.0"
   },
   "devDependencies": {
