--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "yargs": "^3.7.2"
   },
   "scripts": {
-    "prepublish": "gulp prepare-cesium",
+    "prepublish": "cd node_modules/terriajs-cesium && npm install && gulp prepare-cesium",
     "postpublish": "git tag -a ${npm_package_version} -m \"${npm_package_version}\" && git push origin ${npm_package_version}"
   },
   "browserify": {
