--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "yargs": "^3.7.2"
   },
   "scripts": {
-    "prepublish": "if [ ! -d \"./wwwroot/build\" ]; then gulp prepare-cesium; fi",
-    "postpublish": "git tag -a ${npm_package_version} -m \"${npm_package_version}\" && git push origin ${npm_package_version}",
-    "postinstall": "if [ ! -d \"./wwwroot/build\" ]; then gulp prepare-cesium; fi"
+    "prepublish": "bash -c \"if [ ! -d \"./wwwroot/build\" ]; then gulp prepare-cesium; fi\"",
+    "postpublish": "bash -c \"git tag -a ${npm_package_version} -m \"${npm_package_version}\" && git push origin ${npm_package_version}\"",
+    "postinstall": "bash -c \"if [ ! -d \"./wwwroot/build\" ]; then gulp prepare-cesium; fi\""
   },
   "browserify": {
     "transform": [
