Allow loading init files in .hjson format. HJson (http://hjson.org/) is more user friendly (no quotes or commas), allows inline comments, and is slightly smaller.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "URIjs": "^1.15.0",
     "brfs": "^1.4.0",
+    "hjson": "^1.6",
     "html2canvas": "^0.5.0-alpha2",
     "javascript-natural-sort": "^0.7.1",
     "leaflet": "^0.7.3",
