--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less-plugin-npm-import": "^2.0.0",
     "markdown-it": "^4.2.0",
     "proj4": "^2.3.6",
+    "resolve": "^1.1.6",
     "sanitize-caja": "^0.1.3",
     "terriajs-cesium": "^1.8.3",
     "togeojson": "^0.9.0"
