--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "scripts": {
     "prepublish": "bash -c \"if [ ! -d \"./wwwroot/build\" ]; then gulp prepare-cesium; fi\"",
     "postpublish": "bash -c \"git tag -a ${npm_package_version} -m \"${npm_package_version}\" && git push origin ${npm_package_version}\"",
-    "postinstall": "bash -c \"if [ ! -d \"./wwwroot/build\" ]; then gulp prepare-cesium; fi\""
+    "postinstall": "bash && bash -c \"if [ ! -d \"./wwwroot/build\" ]; then gulp prepare-cesium; fi\""
   },
   "browserify": {
     "transform": [
