--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "proj4": "^2.3.6",
     "resolve": "^1.1.6",
     "sanitize-caja": "^0.1.3",
-    "terriajs-cesium": "^1.10.2",
     "togeojson": "^0.9.0"
+  },
+  "peerDependencies": {
+    "terriajs-cesium": "1.10.3"
   },
   "devDependencies": {
     "browserify": "^9.0.8",
