--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "resolve": "^1.1.6",
     "sanitize-caja": "^0.1.3",
     "terriajs-cesium": "1.11.0",
-    "togeojson": "^0.9.0"
+    "togeojson": "^0.9.0",
+    "hammerjs": "^2.0.4",
   },
   "devDependencies": {
     "browserify": "^9.0.8",
@@ -40,7 +41,6 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
-    "hammerjs": "^2.0.4",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0",
