Fix trailing comma.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "sanitize-caja": "^0.1.3",
     "terriajs-cesium": "1.11.0",
     "togeojson": "^0.9.0",
-    "hammerjs": "^2.0.4",
+    "hammerjs": "^2.0.4"
   },
   "devDependencies": {
     "browserify": "^9.0.8",
