--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "URIjs": "^1.15.0",
     "brfs": "^1.4.0",
+    "hammerjs": "^2.0.4",
     "html2canvas": "^0.5.0-alpha2",
     "javascript-natural-sort": "^0.7.1",
     "leaflet": "^0.7.3",
@@ -21,7 +22,7 @@
     "sanitize-caja": "^0.1.3",
     "terriajs-cesium": "1.11.1",
     "togeojson": "^0.9.0",
-    "hammerjs": "^2.0.4"
+    "topojson": "^1.6.19"
   },
   "devDependencies": {
     "browserify": "^9.0.8",
