start on a chart viewmodel

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "sanitize-caja": "^0.1.3",
     "terriajs-cesium": "1.14.1",
     "togeojson": "^0.9.0",
-    "hammerjs": "^2.0.4"
+    "hammerjs": "^2.0.4",
+    "dygraphs": "^1.1.0"
   },
   "devDependencies": {
     "browserify": "^9.0.8",
