--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "^1.10.0",
     "gulp-less": "^3.0.2",
+    "gulp-shell": "^0.5.1",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
+    "jsdoc": "^3.3.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0",
