--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "dependencies": {
     "brfs": "^1.4.0",
     "hammerjs": "^2.0.4",
-    "handlebars": "^4.0.4",
     "html2canvas": "^0.5.0-alpha2",
     "javascript-natural-sort": "^0.7.1",
     "leaflet": "^0.7.3",
     "less": "^2.5.0",
     "less-plugin-npm-import": "^2.0.0",
     "markdown-it": "^4.2.0",
+    "mustache": "^2.2.0",
     "proj4": "^2.3.6",
     "resolve": "^1.1.6",
     "sanitize-caja": "^0.1.3",
