update package json

--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "gulp-jasmine": "^2.0.1",
     "gulp-jshint": "^1.10.0",
     "gulp-less": "^3.0.2",
+    "gulp-ruby-sass": "^2.0.5",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
     "jsdoc": "^3.3.3",
+    "react": "^0.14.3",
+    "reactify": "^1.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0",
