--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "browserify": "^9.0.8",
     "compression": "^1.4.3",
     "cors": "^2.5.3",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.11.2",
     "exorcist": "^0.1.6",
     "express": "^4.12.3",
     "glob": "^5.0.5",
@@ -45,16 +47,16 @@
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
     "jsdoc": "^3.3.3",
+    "jshint": "2.8.x",
     "kss": "^2.1.1",
     "react": "^0.14.3",
     "reactify": "^1.1.1",
-    "jshint": "2.8.x",
+    "sinon": "^1.17.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0",
     "watchify": "^3.1.1",
-    "yargs": "^3.7.2",
-    "sinon": "^1.17.2"
+    "yargs": "^3.7.2"
   },
   "scripts": {
     "prepublish": "bash -c \"if [ ! -d \"./wwwroot/build\" ]; then gulp prepare-cesium; fi\"",
