--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "brfs": "^1.4.0",
     "hammerjs": "^2.0.4",
-    "html2canvas": "^0.5.0-alpha2",
+    "html2canvas": "0.5.0-alpha2",
     "javascript-natural-sort": "^0.7.1",
     "leaflet": "0.7.3",
     "less": "^2.5.0",
