--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "terriajs-cesium": "1.15.4",
     "togeojson": "^0.9.0",
     "urijs": "^1.16.0",
-    "urthecast": "^1.0.0"
+    "urthecast": "^1.0.0",
+    "pbf": "^1.3.2",
+    "vector-tile": "1.2.0"
   },
   "devDependencies": {
     "browserify": "^9.0.8",
