--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "urijs": "^1.16.0",
     "urthecast": "^1.0.0",
     "pbf": "^1.3.2",
-    "vector-tile": "1.2.0"
+    "vector-tile": "1.2.0",
+    "point-in-polygon": "1.0.0"
   },
   "devDependencies": {
     "browserify": "^9.0.8",
