--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "url": "http://github.com/TerriaJS/terriajs"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.3.13",
+    "babelify": "^7.2.0",
     "brfs": "^1.4.0",
     "hammerjs": "^2.0.4",
     "html2canvas": "0.5.0-alpha2",
@@ -19,6 +21,7 @@
     "markdown-it": "^4.2.0",
     "mustache": "^2.2.0",
     "proj4": "^2.3.6",
+    "redux": "^3.0.5",
     "resolve": "^1.1.6",
     "sanitize-caja": "^0.1.3",
     "terriajs-cesium": "1.15.4",
@@ -63,7 +66,15 @@
   },
   "browserify": {
     "transform": [
-      "brfs"
+      "brfs",
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ]
     ]
   }
 }
