--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mustache": "^2.2.0",
     "proj4": "^2.3.6",
     "redux": "^3.0.5",
+    "redux-thunk": "^1.0.3",
     "resolve": "^1.1.6",
     "sanitize-caja": "^0.1.3",
     "terriajs-cesium": "1.15.4",
@@ -66,7 +67,6 @@
   },
   "browserify": {
     "transform": [
-      "brfs",
       [
         "babelify",
         {
@@ -74,7 +74,8 @@
             "es2015"
           ]
         }
-      ]
+      ],
+      "brfs"
     ]
   }
 }
