--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "proj4": "^2.3.6",
     "resolve": "^1.1.6",
     "sanitize-caja": "^0.1.3",
-    "terriajs-cesium": "git://github.com/TerriaJS/cesium#knockout-3.4.0",
+    "terriajs-cesium": "1.15.6",
     "togeojson": "^0.9.0",
     "urijs": "^1.16.0",
     "urthecast": "^1.0.0"
