--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "urthecast": "^1.0.0"
   },
   "devDependencies": {
+    "babelify": "^7.2.0",
+    "babel-eslint": "^4.1.6",
+    "babel-preset-es2015": "^6.3.13",
     "browserify": "^9.0.8",
     "compression": "^1.4.3",
     "cors": "^2.5.3",
@@ -40,17 +43,14 @@
     "gulp-concat": "^2.5.2",
     "gulp-jasmine": "^2.0.1",
     "gulp-jshint": "^2.0.0-alpha2",
-    "gulp-less": "^3.0.2",
     "gulp-ruby-sass": "^2.0.5",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
     "jsdoc": "^3.3.3",
-    "jshint": "2.8.x",
     "kss": "^2.1.1",
     "react": "^0.14.3",
-    "reactify": "^1.1.1",
     "sinon": "^1.17.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
@@ -65,8 +65,17 @@
   },
   "browserify": {
     "transform": [
-      "reactify",
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015",
+            "react"
+          ]
+        }
+      ],
       "brfs"
     ]
   }
 }
+
