--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "prepublish": "bash -c \"if [ ! -d \"./wwwroot/build\" ]; then gulp prepare-cesium; fi\"",
     "postpublish": "bash -c \"git tag -a ${npm_package_version} -m \"${npm_package_version}\" && git push origin ${npm_package_version}\"",
     "postinstall": "bash -c \"if [ ! -d \"./wwwroot/build\" ]; then gulp prepare-cesium; fi\"",
-    "makeschema": "node node_modules/.bin/gen-schema --source . --dest wwwroot/schema --noversionsubdir"
+    "make-schema": "node node_modules/.bin/gen-schema --source . --dest wwwroot/schema --noversionsubdir"
   },
   "browserify": {
     "transform": [
